--- a/assets/dataanalysis-references.bib
+++ b/assets/dataanalysis-references.bib
@@ -1,107 +1,87 @@
-@article{wei2010review,
-  title={A review of the application of RFM model},
-  author={Wei, Jo-Ting and Lin, Shih-Yen and Wu, Hsin-Hung},
-  journal={African journal of business management},
-  volume={4},
-  number={19},
-  pages={4199},
-  year={2010},
-  publisher={Academic Journals}
+@article{pinos2024,
+    author  = "Pinos, I. and others",
+    title   = "{β}-Carotene accelerates the resolution of atherosclerosis in mice",
+    journal = "eLife",
+    volume  = "12",
+    pages   = "RP87430",
+    year    = "2024"
 }
 
-@article{yeh2009knowledge,
-  title={Knowledge discovery on RFM model using Bernoulli sequence},
-  author={Yeh, I-Cheng and Yang, King-Jang and Ting, Tao-Ming},
-  journal={Expert Systems with applications},
-  volume={36},
-  number={3},
-  pages={5866--5871},
-  year={2009},
-  publisher={Elsevier}
+@article{shaish1995,
+    author  = "Shaish, A. and Daugherty, A. and O'Sullivan, F. and Schonfeld, G. and Heinecke, J. W.",
+    title   = "Beta-carotene inhibits atherosclerosis in hypercholesterolemic rabbits",
+    journal = "J Clin Invest",
+    volume  = "96",
+    number  = "4",
+    pages   = "2075-2082",
+    year    = "1995",
+    doi     = "10.1172/JCI118256"
 }
 
-@article{lee2013model,
-  title={Model-based clustering and classification with non-normal mixture distributions},
-  author={Lee, Sharon X and McLachlan, Geoffrey J},
-  journal={Statistical Methods \& Applications},
-  volume={22},
-  number={4},
-  pages={427--454},
-  year={2013},
-  publisher={Springer}
+@article{getz2012,
+    author  = "Getz, G. S. and Reardon, C. A.",
+    title   = "Animal models of atherosclerosis",
+    journal = "Arterioscler Thromb Vasc Biol",
+    volume  = "32",
+    number  = "5",
+    pages   = "1104-1115",
+    year    = "2012",
+    doi     = "10.1161/ATVBAHA.111.237693"
 }
 
-@article{young2019finite,
-  title={Finite mixture-of-gamma distributions: estimation, inference, and model-based clustering},
-  author={Young, Derek S and Chen, Xi and Hewage, Dilrukshi C and Nilo-Poyanco, Ricardo},
-  journal={Advances in Data Analysis and Classification},
-  volume={13},
-  pages={1053--1082},
-  year={2019},
-  publisher={Springer}
+
+@article{grune2010,
+    author  = "Grune, T. and Lietz, G. and Palou, A. and others",
+    title   = "Beta-carotene is an important vitamin {A} source for humans",
+    journal = "J Nutr",
+    volume  = "140",
+    number  = "12",
+    pages   = "2268S-2285S",
+    year    = "2010",
+    doi     = "10.3945/jn.109.119024"
 }
 
-@article{leek2015,
-  title = {Statistics. {{What}} Is the Question?},
-  author = {Leek, Jeffery T and Peng, Roger D},
-  year = {2015},
-  month = mar,
-  journal = {Science (New York, N.Y.)},
-  volume = {347},
-  number = {6228},
-  pages = {1314--1315},
-  issn = {1095-9203},
-  doi = {10.1126/science.aaa6146},
-  __markedentry = {[andreas:6]},
-  citation-subset = {IM},
-  completed = {2015-04-14},
-  issn-linking = {0036-8075},
-  nationality = {United States},
-  nlm-id = {0404511},
-  owner = {NLM},
-  pii = {science.aaa6146},
-  pmid = {25721505},
-  pubmodel = {Print-Electronic},
-  pubstatus = {ppublish},
-  revised = {2015-05-01},
-  keywords = {Data Interpretation,Reproducibility of Results,Statistical}
+@article{henning2021,
+    author  = "Henning, R. J.",
+    title   = "Obesity and obesity-induced inflammatory disease contribute to atherosclerosis: a review of the pathophysiology and treatment of obesity",
+    journal = "Am J Cardiovasc Dis",
+    volume  = "11",
+    number  = "4",
+    pages   = "504-529",
+    year    = "2021",
+    doi     = "10.3945/jn.109.119024"
 }
 
-@article{mckay2020,
-  title = {Associations {{Between Relative Viral Load}} at {{Diagnosis}} and {{Influenza A Symptoms}} and {{Recovery}}.},
-  author = {McKay, Brian and Ebell, Mark and Billings, Wesley Zane and Dale, Ariella Perry and Shen, Ye and Handel, Andreas},
-  year = {2020},
-  month = nov,
-  journal = {Open forum infectious diseases},
-  volume = {7},
-  number = {11},
-  pages = {ofaa494},
-  address = {{United States}},
-  issn = {2328-8957},
-  doi = {10.1093/ofid/ofaa494},
-  abstract = {Background: Rapid point-of-care polymerase chain reaction (PCR) diagnostic tests generally provide a qualitative result of positive or negative only. Additional information about the relative viral load could be calculated. Such quantitative information might be useful for making treatment decisions. Methods: We enrolled students at a university health center who presented with cough and 1 additional flu-like symptom from December 2016 to February 2017. Data were collected before, during, and 5 days after the clinic visit. All those enrolled in the study received a point-of-care PCR test (cobas Liat). For those patients that tested positive for influenza A, we investigated correlations between the relative viral load and measures of disease severity and recovery. Results: One hundred thirty-five students tested positive for influenza A. We found a positive correlation between viral load and body temperature. Time since symptom onset seemed to have a negative correlation but was not statistically significant. We did not find any correlations between viral load and overall symptom severity or outcomes related to recovery. Conclusions: Although we found a correlation between relative viral load and body temperature, for our study population of young, overall healthy adults, we did not find that relative viral load provided additional information that could help in determining treatment and disease outcomes. It could be that viral load does provide useful additional information for other groups of patients, such as young children or older adults. Further studies on those populations are warranted.},
-  copyright = {(c) The Author(s) 2020. Published by Oxford University Press on behalf of Infectious Diseases Society of America.},
-  langid = {english},
-  pmcid = {PMC7751133},
-  pmid = {33376754},
-  keywords = {infection outcomes,influenza,point-of-care testing,viral load}
+
+@article{vakhtangadze2021,
+    author  = "Vakhtangadze, T. and Singh Tak, R. and Singh, U. and Baig, M. S. and Bezsonov, E.",
+    title   = "Gender Differences in Atherosclerotic Vascular Disease: From Lipids to Clinical Outcomes",
+    journal = "Front Cardiovasc Med",
+    volume  = "8",
+    pages   = "707889",
+    year    = "2021",
+    doi     = "10.3389/fcvm.2021.707889"
 }
 
-@article{mckay2020a,
-  title = {Virulence-Mediated Infectiousness and Activity Trade-Offs and Their Impact on Transmission Potential of Influenza Patients.},
-  author = {McKay, Brian and Ebell, Mark and Dale, Ariella Perry and Shen, Ye and Handel, Andreas},
-  year = {2020},
-  month = may,
-  journal = {Proceedings. Biological sciences},
-  volume = {287},
-  number = {1927},
-  pages = {20200496},
-  address = {{England}},
-  issn = {1471-2954 0962-8452},
-  doi = {10.1098/rspb.2020.0496},
-  abstract = {Communicable diseases are often virulent, i.e. they cause morbidity symptoms in those infected. While some symptoms may be transmission- enhancing, other symptoms are likely to reduce transmission potential. For human diseases, the reduction in transmission opportunities is commonly caused by reduced activity. There is limited data regarding the potential impact of virulence on transmission potential. We performed an exploratory data analysis of 324 influenza patients at a university health centre during the 2016/2017 influenza season. We classified symptoms as infectiousness-related or morbidity-related and calculated two scores. The scores were used to explore the relationship between infectiousness, morbidity (virulence), and activity level. We found a decrease in the activity level with increasing morbidity scores. There was no consistent pattern between an activity level and an infectiousness score. We also found a positive correlation between morbidity and infectiousness scores. Overall, we find that increasing virulence leads to increased infectiousness and reduced activity, suggesting a trade-off that can impact overall transmission potential. Our findings indicate that a reduction of systemic symptoms may increase host activity without reducing infectiousness. Therefore, interventions should target both systemic- and infectiousness-related symptoms to reduce overall transmission potential. Our findings can also inform simulation models that investigate the impact of different interventions on transmission.},
-  langid = {english},
-  pmcid = {PMC7287351},
-  pmid = {32396798},
-  keywords = {*infectious diseases,*influenza,*trade-off,*transmission,*virulence,*Virulence,Humans,{Influenza, Human/*transmission}}
+
+@article{luca2023,
+    author  = "Luca, A. and David, S. G. and David, A. G. and Ţarcă, V. and Pădureț, I. and Mîndru, D. E. and Roșu, S. T. and Roșu, E. V. and Adumitrăchioaiei, H. and Bernic, J. and Cojocaru, E. and Ţarcă, E.",
+    title   = "Atherosclerosis from Newborn to Adult—Epidemiology, Pathological Aspects, and Risk Factors",
+    journal = "Life",
+    volume  = "13",
+    number  = "10",
+    pages   = "2056",
+    year    = "2023",
+    doi     = "10.3390/life13102056"
+}
+
+@article{herrington2016,
+    author  = "Herrington, W. G. and Lacey, B. and Sherliker, P. and Armitage, J. and Lewington, S.",
+    title   = "Epidemiology of atherosclerosis and the potential to reduce the global burden of atherothrombotic disease",
+    journal = "Circulation Research",
+    volume  = "118",
+    number  = "4",
+    pages   = "535-546",
+    year    = "2016",
+    doi     = "10.1161/circresaha.115.307611"
 }
